a few bug fixes plus css alignment for smallest devise on car_modal

--- a/app/assets/stylesheets/components/_btns.scss
+++ b/app/assets/stylesheets/components/_btns.scss
@@ -99,6 +99,10 @@
       margin: auto;
       font-size: 1.5rem;
     }
+    a {
+      text-decoration:inherit !important;
+      color: inherit;
+    }
     &:hover{
       background-color: $yellow;
       cursor: pointer;
