--- a/app/assets/stylesheets/components/_carmodal.scss
+++ b/app/assets/stylesheets/components/_carmodal.scss
@@ -98,3 +98,37 @@
   justify-content: center;
 }
 
+
+// Smallest devices (landscape phones, 576px and up)
+@media (min-width: 100px) and (max-width: 575px) {
+
+  .car-modal {
+    height: 170vh;
+  }
+  .car-modal-info {
+    display: flex;
+    flex-direction: column;
+  }
+  .left-section {
+    height: 88vh;
+    width: 100%;
+  }
+  .modal-vehicle-image .modal-image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .right-section {
+    height: 80vh;
+    width: 100%;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (max-width: 992px) and(min-width: 768px) {
+  .modal-logo{
+    // width: 250px !important;;
+    height: 60%;
+    object-fit: fill;
+  }
+}
